// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ToolTipShortcut with alt 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    ⌥  +  P
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with cmd 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    ⌘  +  D
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with down arrow 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    ⌘  +  SHIFT  +  ↓
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with left arrow 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    ←
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with right arrow 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    →
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with shortcut 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    G
  </div>
</div>
`;

exports[`Storyshots components/ToolTipShortcut with up arrow 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#343741",
      "padding": "5px",
      "width": "100px",
    }
  }
>
  <div
    className="euiText emotion-euiText-xs-euiTextColor-ghost-euiTextAlign-center"
    style={Object {}}
  >
    ⌘  +  SHIFT  +  ↑
  </div>
</div>
`;
